debugging ERational <-> Rational